# game

./: .gitignore  CMakeLists.txt
resources/collisions/: box.collis  rusty_body.collis  rusty_engine.collis  rusty_tail.collis  rusty_wings.collis
shaders/: .light.vert.swp  .sprite.frag.swp  .sprite.vert.swp  aabb.frag  aabb.geom  aabb.vert  basic.frag  basic.vert  button.frag  button.vert  circle.frag  circle.vert  contour.frag  contour.vert  coord.frag  coord.vert  ctex.frag  ctex.vert  rotation.frag  rotation.vert  sprite.frag  sprite.vert  tex.frag  tex.vert  text.frag  text.vert
src/: .main.cpp.swp  .shader.cpp.swp  .shader.h.swp  CMakeCache.txt  camera.cpp  camera.h  free_camera.cpp  free_camera.h  game.cpp  game.h  game_camera.cpp  game_camera.h  gravity_object.cpp  gravity_object.h  input.cpp  input.h  levels.h  loads.h  main.cpp  main1.cpp  objects.h  resources.cpp  resources.h  restest.cpp  restest.h  shader.cpp  shader.h  sprite.cpp  sprite.h  testmain.cpp  testshader.cpp  testshader.h  texture.cpp  texture.h
src/Levels/: first_level.cpp  first_level.h  level.h
src/interface/: button.cpp  button.h  coll_edit_gui.cpp  coll_edit_gui.h  color_button.cpp  color_button.h  data.h  interface.cpp  interface.h  load_button.cpp  load_button.h  setting.h  show_hide_button.cpp  show_hide_button.h
src/levels/: collisions_editor.cpp  collisions_editor.h  first_level.cpp  first_level.h  keys.h  level.h  object_loader.cpp  object_loader.h
src/loads/: resources.cpp  resources.h  shader.cpp  shader.h  texture.h
src/objects/: 2  aircraft_parts.h  coll_draw.cpp  coll_draw.h  collision.cpp  collision.h  collision_pointers.cpp  collision_pointers.h  graphic_object.cpp  graphic_object.h  level.h  physical_object.cpp  physical_object.h  plane.cpp  plane.h  shape.cpp  shape.h  shape_draw.cpp  shape_draw.h
src/objects/AircraftParts/: body.cpp  body.h  engine.cpp  engine.h  rusty_body.cpp  rusty_body.h  rusty_engine.cpp  rusty_engine.h  rusty_tail.cpp  rusty_tail.h  rusty_wings.cpp  rusty_wings.h  tail.cpp  tail.h  wings.cpp  wings.h
src/utility/: 2  character.h  collision_in_files.cpp  collision_in_files.h  coordinate_system.cpp  coordinate_system.h  list.cpp  list.h  resources.cpp  resources.h  shader.cpp  shader.h  string.cpp  string.h  temp_list.cpp  texture.cpp  texture.h  visual_string.cpp  visual_string.h
